# sudoku_GRPO

./: .gitignore  README.md  pyproject.toml
.agents/skills/trackio/: SKILL.md  alerts.md  retrieving_metrics.md  storage_schema.md
.codex/skills/: trackio
debug/: modal_poc_logs.txt
scripts/: check_remote_prereqs.py  push_openenv.py
sudoku_env/: .dockerignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
sudoku_env/server/: Dockerfile  __init__.py  app.py  requirements.txt  sudoku_environment.py
tests/: test_client_serialization.py  test_hf_space_import.py  test_sudoku_environment.py
training/: modal_train_sudoku_grpo.py
